# deepseek-ocr-vllm

./: .flux.yaml  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_FIXES_2025-10-12.md  ARCHITECTURE_SEPARATION.md  ARGILLA_DEPLOYMENT.md  AUDIT_REPORT_K3S_NETWORK_2025-10-13.md  AUDIT_REPORT_TAILSCALE_DAEMONSET.md  AUTOMATED_UPDATES.md  CLAUDE.md  CURRENT_STATE.md  DATA_LOAD_VERIFICATION.md  DATA_PIPELINE_STATUS.md  DATA_SCHEMA_DEEP_DIVE.md  DEPLOYMENT_V3_V6.md  EBISU_LOCAL_SETUP_COMPLETE.md  ESC-SETUP.md  FINAL_SCRIPT_REMOVAL.md  FOCUS.md  FUTURE_NETWORKING_ARCHITECTURE.md  GITHUB_TOKEN_SETUP.md  GITOPS.md  INFRASTRUCTURE.md  INFRASTRUCTURE_STATUS_2025-10-12.md  INTELLIGENCE_DOSSIER_GAPS.md  INTELLIGENCE_ROADMAP.md  ISSUES_TODO.md  LOCAL_SETUP_COMPLETE.md  Makefile  OPERATIONS.md  PHASE_1_AUDIT_REPORT.md  POSTGRAPHILE_CONTRACT.md  PREVIEW-RESULTS.md  QUICKSTART.md  (+39 more)
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  issue-manifest-living-schema.json  issue-manifest.json
.husky/: pre-commit  pre-push
@docs/: oceanid-label-studio-refined.md  oceanid-label-studio.md.txt
adapter/: Dockerfile  README.md  app.py  app_with_ner.py  (+1 more)
apps/ocr-service/: Dockerfile  README.md  go.mod  main.go  main_test.go  pyproject.toml
apps/ocr-service/src/ocr_service/: __init__.py  __main__.py  app.py  config.py  models.py  queue.py  repository.py  storage.py
apps/ocr-service/tests/: test_app.py
(+775 files in other folders)
