[project]
name = "ocr-service"
version = "0.1.0"
description = "Async DeepSeek OCR ingestion API for SMEs"
authors = [{ name = "Goldfish Oceanid", email = "ops@goldfish.example" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis[hiredis]>=5.0.8",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "boto3>=1.35.0",
    "orjson>=3.10.0",
    "tenacity>=9.0.0"
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.23.0",
    "asgi-lifespan>=2.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
